# DECT-2020

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: CheckAtomic.cmake  CheckCSourceRuns.cmake  CheckFunctionExists.c  CheckFunctionExistsMath.cmake  FindBackward.cmake  FindFFTW3F.cmake  FindLibConfig.cmake  FindLimeSDR.cmake  FindMKL.cmake  FindMbedTLS.cmake  FindPCSCLite.cmake  FindPolarssl.cmake  FindRapidJSON.cmake  FindSCTP.cmake  FindSRSGUI.cmake  FindSSE.cmake  FindSoapySDR.cmake  FindUHD.cmake  FindZeroMQ.cmake  FindbladeRF.cmake  SRSRANPackage.cmake  SRSRANVersion.cmake  SRSRAN_install_configs.sh.in  SRSRANbuildinfo.cmake.in
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/include/dect2020/: CMakeLists.txt  config.h
lib/include/dect2020/phy/: CMakeLists.txt  packet_sizes.h
lib/include/dect2020/phy/transport_channels/: CMakeLists.txt  trch.h
lib/include/dect2020/sections_part3/: beamforming_and_antenna_port_mapping.h  drs.h  mcs.h  numerologies.h  pcc.h  pcc_enc.h  pdc.h  pdc_enc.h  physical_resources.h  radio_device_class.h  stf.h  tm_mode.h  transmission_packet_structure.h  transmit_diversity_precoding.h  transport_block_size.h
lib/include/dect2020/sections_part4/: CMakeLists.txt  feedback_info.h  physical_header_field.h
lib/include/dect2020/utils/: debug.h  math_functions.h
lib/src/phy/: packet_sizes.cc
lib/src/phy/transport_channels/: trch.cc
lib/src/sections_part3/: beamforming_and_antenna_port_mapping.cc  drs.cc  mcs.cc  numerologies.cc  pcc.cc  pcc_enc.cc  pdc.cc  pdc_enc.cc  physical_resources.cc  radio_device_class.cc  stf.cc  tm_mode.cc  transmission_packet_structure.cc  transmit_diversity_precoding.cc  transport_block_size.cc
lib/src/sections_part4/: feedback_info.cc  physical_header_field.cc
lib/src/utils/: debug.cc  math_functions.cc
lib/test/: CMakeLists.txt  coding_plcf.cc  coding_tb_awgn.cc  coding_tb_configurations.cc  modulation.cc  pdu.cc  subc_allocation.cc
matlab/: tb_coding_awgn.m
